docs/src/styles/main.css
html {
    scroll-behavior: smooth;
}

body {
    background: #f0e8d5;
    color: #1e1e1e;
    font-family: aktiv-grotesk, sans-serif;
    font-weight: 400;
    padding: 60px 15px;
}

h1, h2, h3 {
    font-weight: 600 !important;
}

h1, .h1 {
    font-size: 2.75em;
}

h3 {
    text-transform: uppercase;
}

h3, .callout {
    font-size: 1.1em;
}

h4 {
    font-size: 1.35em;
    font-weight: 600;
}

p {
    line-height: 1.75;
}

.wrap {
    width: 96%;
    margin: 0 auto;
}

.cf {
    zoom: 1;
}

ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

ul li {
    display: inline-block;
}

ul li:not(:last-child) {
    margin-right: 30px;
}

ul li a {
    color: #1e1e1e;
    text-decoration: none;
    text-transform: uppercase;
}

a {
    transition: opacity 0.25s ease;
}

a:hover {
    opacity: 0.7;
}

section, section#applications .wrap .applications-section {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    position: relative;
}

section#applications {
    height: auto;
}

div#applications-menu-container h3, nav#applications-menu {
    display: inline-block;
}

div#applications-menu-container h3:after {
    content: '';
    width: 16px;
    height: 16px;
    display: inline-block;
    background: url(/cloudbeds/docs/src/images/chevron-right-regular-full.svg) center/contain no-repeat;
    margin: 0 15px;
}

#overview img, #applications img {
    border-radius: 15px;
    box-shadow: 0px 2px 8px 1px rgb(165 158 143 / 40%);
    width: auto;
    max-width: 100%;
}

.fade-out {
    opacity: 0;
}

.divider-title {
    margin-bottom: 100px;
    position: relative;
}

.divider-title:after, div#applications-menu-container .wrap:after {
    content: '';
    position: absolute;
    left: 15px;
    top: 50%;
    transform: translateY(-50%);
    display: block;
    width: calc(100% - 15px);
    height: 1px;
    background: #1e1e1e;
}

.divider-title span, div#applications-menu-container > .wrap > div {
    background: #f0e8d5;
    padding-right: 30px;
    position: relative;
    z-index: 1;
    display: inline-block;
}

div#applications-menu-container {
    width: 100%;
    position: sticky;
    top: 0;
    background: #f0e8d5;
    padding: 20px 0;
    margin: -20px 0;
    z-index: 1;
}

div#applications-menu-container:before {
    content: '';
    display: block;
    width: calc(100% + 130px);
    height: 1px;
    background-color: transparent;
    position: absolute;
    left: 0;
    bottom: 0;
    margin: 0 -65px;
    transition: background-color 0.25s ease;
}

div#applications-menu-container.sticky:before {
    background-color: #e3d4b0;
}

div#applications-menu-container .wrap {
    position: relative;
}

ul li a.in-view {
    font-weight: 600;
}

#lava-lamp {
    position: absolute;
    right: 0;
    bottom: 0;
}

.lava-lamp-container, .lava-lamp {
	overflow: hidden;
	width: 48px;
	height: 100px;
}

.lava-lamp {
    position: relative;
}

.lava-lamp img {
	max-width: unset;
}

h1 img {
    max-width: 136px;
}

#hero p {
    margin-top: 60px;
    font-size: 1.25em;
}

section#github a {
    text-decoration: none;
    color: #1e1e1e;
    font-weight: 600;
    margin-top: 30px;
    display: inline-flex;
    align-items: center;
}

section#github a:after {
    content: '';
    display: inline-block;
    width: 20px;
    height: 20px;
    background: url(/cloudbeds/docs/src/images/arrow-right-long-regular-full.svg) center/contain no-repeat;
    margin-left: 10px;
}

footer h2.h1, footer p, footer a {
    color: #f0e8d5;
}

footer {
    background: #1e1e1e;
    padding: 80px 15px;
    max-width: 1600px;
    margin: 0 auto;
}

footer p {
    font-size: 1.35em;
}

footer p:last-child {
    margin-bottom: 0;
}

#jump-to {
    display: block;
    transform: rotate(90deg);
    border: 2px solid #000000;
    border-radius: 50%;
    padding: 8px;
    width: 50px;
    height: 50px;
    margin-top: 30px;
}

